--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather App</title>
+ 
+     <link rel="stylesheet" href="style.css">
+     
+</head>
+<body>
+    <div class="container">
+        <div class="contant"> 
 
+            <div> 
+                <span id="city"></span>
+                <span id="country"> </span>
+            </div>
+
+            <div class="dayAndDate"> 
+                <span id="day"> </span>
+                <span id="month"> </span>
+                <span id="date"> </span>
+            </div> 
+
+            <div id="temp"></div>
+
+            <img id="icon" width="100rem" src=""  alt="">
+
+            <div id="desc">No Information Available.</div>
+ 
+            </div>
+        </div> 
+    </div>
+    <script src="script.js"></script> 
+</body>
+</html>
